--- a/NativeAuthSampleApp/Base.lproj/Main.storyboard
+++ b/NativeAuthSampleApp/Base.lproj/Main.storyboard
@@ -236,17 +236,11 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="mFM-Hq-JAF" userLabel="Profile Stack View">
                                         <rect key="frame" x="0.0" y="476.66666666666657" width="373" height="170.33333333333331"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z6Z-NW-ycK">
-                                                <rect key="frame" x="0.0" y="0.0" width="373" height="24"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z6Z-NW-ycK" userLabel="Profile Header Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="373" height="0.0"/>
                                                 <subviews>
-                                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAv-dq-iDU">
-                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="24"/>
-                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Rh-uX-Nxx">
-                                                        <rect key="frame" x="0.0" y="0.0" width="186.66666666666666" height="24"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Rh-uX-Nxx">
+                                                        <rect key="frame" x="0.0" y="0.0" width="186.66666666666666" height="0.0"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="lock.circle.fill" catalog="system" title=" Access token">
                                                             <color key="baseForegroundColor" red="0.25437366960000002" green="0.48173457380000001" blue="0.1489238739" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -255,8 +249,8 @@
                                                             <action selector="readClaimsPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jc6-Ba-lsB"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xh-Tz-0h6">
-                                                        <rect key="frame" x="186.66666666666663" y="0.0" width="186.33333333333337" height="24"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" enabled="NO" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xh-Tz-0h6">
+                                                        <rect key="frame" x="186.66666666666663" y="0.0" width="186.33333333333337" height="0.0"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="arrow.right.circle.fill" catalog="system" title="Sign Out">
                                                             <color key="baseForegroundColor" red="0.25437366960000002" green="0.48173457380000001" blue="0.1489238739" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -267,11 +261,17 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="boe-R7-qPg" userLabel="Profile Form Stack View" customClass="WgForm" customModule="NativeAuthSampleApp" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="43.999999999999993" width="373" height="126.33333333333331"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T02-Zh-VLM">
+                                                <rect key="frame" x="0.0" y="20" width="373" height="0.0"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="boe-R7-qPg" userLabel="Profile Form Stack View" customClass="WgForm" customModule="NativeAuthSampleApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="40" width="373" height="130.33333333333334"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Lxu-vs-AOW">
-                                                        <rect key="frame" x="0.0" y="0.0" width="373" height="126.33333333333333"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Lxu-vs-AOW">
+                                                        <rect key="frame" x="0.0" y="0.0" width="373" height="130.33333333333334"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WaT-yY-WTt">
                                                                 <rect key="frame" x="0.0" y="0.0" width="373" height="0.0"/>
@@ -335,18 +335,18 @@
                                                                     </switch>
                                                                 </subviews>
                                                             </stackView>
-                                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="WeU-fR-DAZ">
-                                                                <rect key="frame" x="0.0" y="100" width="373" height="26.333333333333329"/>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="WeU-fR-DAZ">
+                                                                <rect key="frame" x="0.0" y="100" width="373" height="30.333333333333343"/>
                                                                 <subviews>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zy6-C3-SyH">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="26.333333333333332"/>
+                                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zy6-C3-SyH">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="30.333333333333332"/>
                                                                         <state key="normal" title="Button"/>
                                                                         <buttonConfiguration key="configuration" style="filled" title="Update" cornerStyle="capsule">
                                                                             <color key="baseBackgroundColor" red="0.25437366960000002" green="0.48173457380000001" blue="0.1489238739" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                         </buttonConfiguration>
                                                                     </button>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PUY-Ra-4Iz">
-                                                                        <rect key="frame" x="201.66666666666663" y="0.0" width="171.33333333333337" height="26.333333333333332"/>
+                                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PUY-Ra-4Iz">
+                                                                        <rect key="frame" x="201.66666666666663" y="0.0" width="171.33333333333337" height="30.333333333333332"/>
                                                                         <state key="normal" title="Button"/>
                                                                         <buttonConfiguration key="configuration" style="filled" title="Delete" cornerStyle="capsule">
                                                                             <color key="baseForegroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -390,6 +390,8 @@
                         <outlet property="headerLabel" destination="POR-Hb-X33" id="AVE-DL-Nk1"/>
                         <outlet property="passwordTextField" destination="RQU-kF-yPS" id="6iW-9V-1gZ"/>
                         <outlet property="profileContainer" destination="mFM-Hq-JAF" id="V2f-hP-buK"/>
+                        <outlet property="profileCountryTextField" destination="LWf-4O-izP" id="LiG-NE-crt"/>
+                        <outlet property="profileNameTextField" destination="FMU-GF-g9o" id="Iju-6T-U8R"/>
                         <outlet property="profileTabBarItem" destination="qWR-sX-H51" id="mVl-gc-GdA"/>
                         <outlet property="resetPasswordButton" destination="IqY-ix-jOU" id="nrw-Kg-8g3"/>
                         <outlet property="resultTextView" destination="WdB-vT-PXQ" id="Et5-xa-lJt"/>
@@ -405,7 +407,6 @@
                         <outlet property="signUpReenterTextField" destination="BCz-ec-0ec" id="eIs-iG-Vnz"/>
                         <outlet property="ssprContainer" destination="QKx-Fo-HpM" id="QVb-E4-ebS"/>
                         <outlet property="ssprEmailTextField" destination="hmA-jG-vHc" id="tn8-1G-aiY"/>
-                        <outlet property="welcomeTo" destination="ZAv-dq-iDU" id="Jpd-IH-0qu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
